Maps zooms in to the current location of user

--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,4 +1,4 @@
 <resources>
 <!--     Google maps api key-->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false"> </string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCYDNMHXuWWcpMsDTpnGY79KWFoTUYszrM</string>
 </resources>
