--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TravelGuide" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.TravelGuide" parent="Theme.MaterialComponents.Light">
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -16,7 +17,5 @@
         <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
-
-        <!-- Customize your theme here. -->
     </style>
 </resources>
