--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -25,7 +25,7 @@
         android:layout_height="match_parent"
         map:cameraTilt="45"
         map:uiCompass="false"
-        tools:context=".MapsActivity" />
+        tools:context=".activities.MapsActivity" />
 
     <FrameLayout
         android:id="@+id/fragmentsFrame"
