Can click on a marker to see a more detailed view of the location including all guides that have been posted for the location. Auto-update map if new guide has been added. Progress bar while location detail list is loading. Added HelperClass

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,8 @@
     <dimen name="fab_margin_bottom">35dp</dimen>
     <dimen name="action_buttons_margin">15dp</dimen>
     <dimen name="compose_margin">20dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
+    <dimen name="avatar_size_img">25dp</dimen>
+    <dimen name="location_header">25sp</dimen>
+    <dimen name="progress_bar_padding">150dp</dimen>
 </resources>
