--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addGuide"
         android:layout_width="wrap_content"
@@ -32,5 +33,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="false" />
+
+    <ProgressBar
+        android:id="@+id/pbMaps"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="@dimen/progress_bar_padding"
+        android:background="@color/white"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
