--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -69,8 +68,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:orientation="horizontal"
-            android:layout_marginBottom="7.5dp">
+            android:layout_marginBottom="7.5dp"
+            android:orientation="horizontal">
 
             <ImageButton
                 android:id="@+id/photoBtn"
@@ -79,21 +78,33 @@
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/add_photo"
                 android:src="@drawable/image_btn_bg" />
+
+            <ImageButton
+                android:id="@+id/galleryBtn"
+                android:layout_width="@dimen/add_guide_media_btn"
+                android:layout_height="@dimen/add_guide_media_btn"
+                android:layout_marginStart="25dp"
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/add_photo"
+                android:src="@drawable/gallery_btn_bg" />
+
         </LinearLayout>
 
         <ImageView
             android:id="@+id/ivPreview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_gravity="center"
             tools:src="@tools:sample/avatars"
-            android:visibility="gone"/>
+            android:layout_marginTop="40dp"/>
 
         <VideoView
             android:id="@+id/vvPreview"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:visibility="gone"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:visibility="gone" />
 
         <LinearLayout
             android:layout_width="match_parent"
