--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -21,7 +21,7 @@
             android:fontFamily="sans-serif-black"
             android:text="@string/new_guide"
             android:textColor="#000000"
-            android:textSize="30dp" />
+            android:textSize="@dimen/header_text_size" />
 
         <LinearLayout
             android:layout_width="match_parent"
