User can add audio to guide and upload it

--- a/app/src/main/res/drawable/clear_btn.xml
+++ b/app/src/main/res/drawable/clear_btn.xml
@@ -18,6 +18,6 @@
         </shape>
     </item>
 
-    <item android:drawable="@drawable/ic_graphic_eq" />
+    <item android:drawable="@drawable/ic_clear_btn" />
 
 </layer-list>
