--- a/app/src/main/res/drawable-v24/clear_btn_pressed.xml
+++ b/app/src/main/res/drawable-v24/clear_btn_pressed.xml
@@ -12,12 +12,12 @@
             <size
                 android:width="@dimen/add_guide_media_btn"
                 android:height="@dimen/add_guide_media_btn" />
-            <solid android:color="@color/off_white" />
+            <solid android:color="@color/white" />
             <corners android:radius="@dimen/corner_radius" />
 
         </shape>
     </item>
 
-    <item android:drawable="@drawable/ic_graphic_eq" />
+    <item android:drawable="@drawable/ic_clear_btn" />
 
 </layer-list>
