--- a/app/src/main/res/layout/location_guide.xml
+++ b/app/src/main/res/layout/location_guide.xml
@@ -27,16 +27,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="5dp"
                 android:background="@color/white"
-                android:orientation="horizontal"
-                android:layout_margin="5dp">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/ivAvatar"
                     android:layout_width="@dimen/avatar_size_img"
                     android:layout_height="@dimen/avatar_size_img"
-                    android:layout_weight="0"
                     android:layout_margin="10dp"
+                    android:layout_weight="0"
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <TextView
@@ -47,8 +47,8 @@
                     android:layout_marginRight="10dp"
                     android:fontFamily="sans-serif-medium"
                     android:text="username"
-                    android:textSize="12sp"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
             </LinearLayout>
 
             <TextView
@@ -59,8 +59,16 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="@dimen/text_margin"
                 android:text="TextView"
-                android:textSize="14sp"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <include
+                android:id="@+id/mediaContainer"
+                layout="@layout/location_guide_media"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginBottom="@dimen/text_margin"/>
 
 
         </LinearLayout>
