Can play audio and video in Guide list detail

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -37,7 +37,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="false"
-            android:iconifiedByDefault="true"/>
+            android:iconifiedByDefault="false"
+            android:queryBackground="@android:color/transparent"/>
     </FrameLayout>
 
     <ProgressBar
