--- a/app/src/main/res/layout/location_guide.xml
+++ b/app/src/main/res/layout/location_guide.xml
@@ -55,7 +55,8 @@
                 android:id="@+id/tvDetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="@dimen/guide_content_margin"
+                android:layout_marginEnd="@dimen/guide_content_margin"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="@dimen/text_margin"
                 android:text="TextView"
@@ -67,7 +68,8 @@
                 layout="@layout/location_guide_media"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="@dimen/guide_content_margin"
+                android:layout_marginEnd="@dimen/guide_content_margin"
                 android:layout_marginBottom="@dimen/text_margin"/>
 
 
