--- a/app/src/main/res/layout/location_guide_media.xml
+++ b/app/src/main/res/layout/location_guide_media.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mediaLayout"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:id="@+id/mediaLayout">
-<!--    android:visibility="gone">-->
+    android:layout_height="wrap_content">
+    <!--    android:visibility="gone">-->
 
     <ImageButton
         android:id="@+id/ibThumb"
@@ -16,13 +16,11 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
-    <VideoView
-        android:id="@+id/videoView"
-        android:layout_width="wrap_content"
-        android:layout_height="150dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+    <com.google.android.exoplayer2.ui.PlayerView
+        android:id="@+id/epPlayer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/black"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
