--- a/app/src/main/res/layout/location_guide_media.xml
+++ b/app/src/main/res/layout/location_guide_media.xml
@@ -14,13 +14,16 @@
         android:padding="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars"
+        android:visibility="gone"/>
 
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/epPlayer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/black"/>
+        android:layout_height="500dp"
+        android:background="@color/black"
+        app:controller_layout_id="@layout/player_view"
+        android:visibility="gone"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
