changed searchview ui

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -31,13 +31,18 @@
         android:id="@+id/fragmentsFrame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true" >
+        android:fitsSystemWindows="true">
 
         <SearchView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:backgroundTint="@color/white"
             android:fitsSystemWindows="false"
-            android:iconifiedByDefault="true"/>
+            android:iconifiedByDefault="true"
+            android:layoutDirection="rtl"
+            android:queryHint="@string/search"/>
+
     </FrameLayout>
 
     <ProgressBar
