Can get places predictions for searchbar Changed icon definitions

--- a/app/src/main/res/drawable-v24/audio_play_btn_selected.xml
+++ b/app/src/main/res/drawable-v24/audio_play_btn_selected.xml
@@ -16,6 +16,6 @@
         </shape>
     </item>
 
-    <item android:drawable="@android:drawable/ic_media_pause" />
+    <item android:drawable="@drawable/ic_baseline_pause_24" />
 
 </layer-list>
