--- a/app/src/main/res/drawable/media_btn.xml
+++ b/app/src/main/res/drawable/media_btn.xml
@@ -18,6 +18,6 @@
         </shape>
     </item>
 
-    <item android:drawable="@android:drawable/ic_menu_camera" />
+    <item android:drawable="@drawable/ic_baseline_camera_alt_24" />
 
 </layer-list>
