--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -37,26 +37,45 @@
             android:id="@+id/searchView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:backgroundTint="@color/white"
+            android:layout_marginLeft="19.5dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:padding="0dp"
+            android:clickable="true"
+            android:elevation="50dp"
             android:fitsSystemWindows="false"
+            android:focusable="true"
             android:iconifiedByDefault="true"
             android:layoutDirection="rtl"
+            android:queryBackground="@color/white"
             android:queryHint="@string/search"
             android:searchIcon="@drawable/search_icon"
-            android:queryBackground="@color/white"
-            android:layout_marginTop="10dp"/>
+            android:visibility="visible" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvSearchList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="75dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="@color/white"
+            android:clickable="true"
+            android:elevation="10dp"
+            android:focusable="true"
+            android:visibility="visible"
+            map:layout_constraintTop_toBottomOf="@+id/searchView"
+            tools:layout_editor_absoluteX="20dp" />
 
+        <ProgressBar
+            android:id="@+id/pbMaps"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:padding="@dimen/progress_bar_padding"
+            android:visibility="invisible" />
     </FrameLayout>
-
-    <ProgressBar
-        android:id="@+id/pbMaps"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:padding="@dimen/progress_bar_padding"
-        android:visibility="invisible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
