--- a/app/src/main/res/layout/activity_search_places.xml
+++ b/app/src/main/res/layout/activity_search_places.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.SearchActivity"
+    tools:context=".activities.SearchPlacesActivity"
     android:background="@color/black">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
